CTF Docker: Added John The Ripper and Hashcat

--- a/CTF-Docker/Dockerfile
+++ b/CTF-Docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM skysider/pwndocker:latest
 
-RUN apt update && apt install -y sudo nano binwalk dnsutils steghide hexcurse nmap
+RUN apt update && apt install -y sudo nano binwalk dnsutils steghide hexcurse nmap john hashcat
 
 ENV TZ="America/New_York"
